finished the nav desktop view section

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,26 @@
 // Navigation code here
+.spacewalker {
+    font-size: 3.5rem;
+    text-align: center; 
+    background-color: @wild-sand;
+    color: @ebony-clay;
+    padding-top: 1%;    
+}
+
+
+nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: @wild-sand;
+    border-bottom: 2px solid @sea-shell;
+
+        a {
+            text-decoration: none;
+            padding: 1% 3%;
+            font-size: 1.4rem;
+            color: @river-bend
+        
+        }
+    
+}
