--- a/css/index.css
+++ b/css/index.css
@@ -160,6 +160,26 @@ p {
   width: 100%;
   margin: 0 auto;
 }
+.spacewalker {
+  font-size: 3.5rem;
+  text-align: center;
+  background-color: #F6F6F6;
+  color: #23293B;
+  padding-top: 1%;
+}
+nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #F6F6F6;
+  border-bottom: 2px solid #F1F1F1;
+}
+nav a {
+  text-decoration: none;
+  padding: 1% 3%;
+  font-size: 1.4rem;
+  color: #454A59;
+}
 footer {
   color: #22283B;
   background: #f4f4f4;
