Finished the mobille view layout and added a couple of mixins

--- a/less/footer.less
+++ b/less/footer.less
@@ -5,7 +5,11 @@ footer {
   padding: 20px 0;
   border: 1px double #e0e0e0;
   border-radius: 10px;
-  display: flex;
-  justify-content: center;
+  .some-flexes();
   align-items: center;
+  margin-bottom: 3%;
+
+  @media @phone {
+    margin: 2%;
+  }
 }
