--- a/css/index.css
+++ b/css/index.css
@@ -164,8 +164,14 @@ p {
   font-size: 3.5rem;
   text-align: center;
   background-color: #F6F6F6;
+  width: 100%;
   color: #23293B;
   padding-top: 1%;
+}
+@media (max-width: 500px) {
+  .spacewalker {
+    width: 100%;
+  }
 }
 nav {
   display: flex;
@@ -173,11 +179,18 @@ nav {
   align-items: center;
   background-color: #F6F6F6;
   border-bottom: 2px solid #F1F1F1;
+  width: 100%;
+}
+@media (max-width: 500px) {
+  nav {
+    width: 100%;
+    justify-content: space-around;
+  }
 }
 nav a {
   text-decoration: none;
-  padding: 1% 3%;
-  font-size: 1.4rem;
+  padding: 1% 1%;
+  font-size: 1.5rem;
   color: #454A59;
 }
 footer {
@@ -189,6 +202,20 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 3%;
+}
+@media (max-width: 500px) {
+  footer {
+    margin: 2%;
+  }
+}
+.home .intro .header-img {
+  border-radius: 10px;
+}
+@media (max-width: 500px) {
+  .home .intro .header-img {
+    width: 100%;
+  }
 }
 .home .intro h2 {
   padding: 15px;
@@ -201,14 +228,35 @@ footer {
   flex-wrap: wrap;
   width: 100%;
 }
+@media (max-width: 500px) {
+  .home .space-images {
+    margin: 2%;
+  }
+}
 .home .space-images img {
   width: 28%;
   margin: 20px 2.5%;
   border-radius: 20px;
   height: 100%;
 }
+@media (max-width: 500px) {
+  .home .space-images .blast {
+    width: 100%;
+  }
+  .home .space-images .sky {
+    display: none;
+  }
+  .home .space-images .launch {
+    display: none;
+  }
+}
 .home .visit-planets {
   padding: 15px;
+}
+@media (max-width: 500px) {
+  .home .visit-planets {
+    margin: 2%;
+  }
 }
 .home .visit-planets h3 {
   margin-top: 11px;
@@ -223,8 +271,22 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 500px) {
+  .home .walk {
+    flex-direction: column-reverse;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 10px 20px;
+    margin: 2%;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 100%;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
@@ -232,9 +294,36 @@ footer {
 .home .walk .walk-text p {
   margin-bottom: 26px;
 }
+.home .walk .walk-text .btn {
+  color: #F6F7F8;
+  background-color: #22283A;
+  font-size: 1.8rem;
+  width: 100px;
+  padding: 10px;
+  margin-top: solid 1px;
+  border-radius: 10px;
+  text-align: center;
+  border: none;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    width: 100%;
+    padding: 5%;
+    border-radius: 5px;
+  }
+}
+.home .walk .walk-text .btn:hover {
+  background-color: #F6F7F8;
+  color: #22283A;
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-img {
+    width: 100%;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
