--- a/less/home-page.less
+++ b/less/home-page.less
@@ -4,6 +4,14 @@
 
   .intro {
 
+    .header-img {
+      border-radius: 10px;
+
+      @media @phone {
+        width: 100%;
+      }
+    }
+
     h2 {
       padding: 15px;
     }
@@ -19,16 +27,37 @@
     flex-wrap: wrap;
     width: 100%;
 
+    @media @phone {
+      margin: 2%;
+    }
+
     img {
       width: 28%;
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
     }
+    @media @phone {
+      .blast {
+        width: 100%;
+      }
+
+    .sky {
+      .hidden-img;
+    }
+
+    .launch {
+      .hidden-img;
+    }
+  }
   }
 
   .visit-planets {
     padding: 15px;
+
+    @media @phone {
+      margin: 2%;
+    }
 
     h3 {
       margin-top: 11px;
@@ -43,11 +72,22 @@
     margin-top: 60px;
     border-top: 1px solid @main-border-color;
     padding: 50px 60px;
-    display: flex;
-    justify-content: center;
+    .some-flexes();
 
+    @media @phone {
+      flex-direction: column-reverse;
+      align-items: center;
+      flex-wrap: wrap;
+      padding: 10px 20px;
+      margin: 2%;
+      
+    }
     .walk-text {
       width: 50%;
+
+      @media @phone {
+        width: 100%;
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -58,12 +98,29 @@
       }
 
       .btn {
+        .button-layout(100px, 10px);
+
+        @media @phone {
+          width: 100%;
+          padding: 5%;
+          border-radius: 5px;
+        }
+
+      }
+
+      .btn:hover {
+        background-color: @porcelain;
+        color: @btn-bg-color; 
       }
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
+
+      @media @phone {
+        width: 100%;
+      }
       
       img {
         width: 100%;
@@ -72,4 +129,5 @@
       }
     }
   }
-}// home
+}
+// home
